WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43049
Crash in WebPageNamespace::preferencesDidChange if preferences are changed after the web process crashes
https://bugs.webkit.org/show_bug.cgi?id=43049
Summary
Crash in WebPageNamespace::preferencesDidChange if preferences are changed af...
Adam Roben (:aroben)
Reported
2010-07-27 07:52:26 PDT
We'll crash in WebPageNamespace::preferencesDidChange if any preferences are changed after the web process crashes. This is because we dereference a null WebProcessProxy. Unfortunately I can't get a backtrace right now.
Attachments
Patch
(1.56 KB, patch)
2010-07-27 08:36 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-07-27 07:52:56 PDT
<
rdar://problem/8239478
>
Adam Roben (:aroben)
Comment 2
2010-07-27 08:36:07 PDT
Created
attachment 62695
[details]
Patch
Adam Roben (:aroben)
Comment 3
2010-07-27 10:18:31 PDT
Committed
r64140
: <
http://trac.webkit.org/changeset/64140
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug