Make preferences APIs robust against web process crashes

Fixes <http://webkit.org/b/43049> Crash in
WebPageNamespace::preferencesDidChange if preferences are changed
after the web process crashes

Reviewed by Anders Carlsson.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::preferencesDidChange): Bail out if we don't have
a web process. The new preference values will get propogated to the
web process if and when it launches.

Canonical link: https://commits.webkit.org/54968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64140 268f45cc-cd09-0410-ab3c-d52691b4dbfc